# epochx64

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bashscript.sh
iso/isodir/boot/grub/: grub.cfg
src/: linker.ld
src/boot/: boot.c  boot.h  shared_boot_defs.h
src/elf/: elf.h
src/fs/: ext2.cpp  ext2.h
src/fs/Epoch-RAM-Disk-Generator/: CMakeLists.txt  main.cpp
src/include/: algorithm.h  epstring.h  fault.h  io.h  ipc.h  linkedlist.h  math.cpp  math.h  mem.cpp  mem.h  ps2.h  window_common.h
src/include/asm/: asm.h
src/include/boot/: shared_boot_defs.h
src/include/defs/: int.h
src/include/elf/: elf.h  relocation.h
src/include/fs/: ext2.h
src/include/math/: conversion.h  math.h
src/include/uefi/: Base.h
src/include/uefi/IndustryStandard/: Acpi10.h  Acpi20.h  Acpi30.h  Acpi50.h
src/include/uefi/Uefi/: UefiSpec.h
src/init/: boot.s
src/kernel/: acpi.cpp  acpi.h  asm.cpp  asm.h  debug.cpp  debug.h  defs.h  graphics.cpp  graphics.h  heap.cpp  heap.h  interrupt.cpp  interrupt.h  interrupt.s  io.cpp  io.h  kernel.cpp  kernel.h  kernel.s  keyboard.cpp  linker.ld  log.cpp  log.h  paging.cpp  paging.h  pic.cpp  pic.h  process.cpp  process.h  scheduler.cpp  scheduler.h  typedef.h  x86_64asm.s
src/kernel/gui/: window.cpp  window.h
src/kernel/include/: acpi.h  font_rom.h  graphics.h  interrupt.h  kernel.h  keyboard.h  log.h  pic.h  process.h  scheduler.h  typedef.h  window.h
src/lib/: algorithm.cpp  epstring.cpp  fault.cpp  io.cpp  linkedlist.cpp  linkedlist.h  mem.cpp  mem.h  string.h  typedef.h
src/lib/asm/: asm.h  asm.s
src/lib/defs/: boot.h  int.h
src/lib/elf/: elf.h  relocation.cpp  relocation.h
src/lib/ipc/: ipc.s
src/lib/math/: conversion.h  math.cpp  math.h
src/lib/uefi/Include/: Base.h
src/lib/uefi/Include/IndustryStandard/: Acpi10.h  Acpi20.h  Acpi30.h  Acpi50.h
src/lib/uefi/Include/Uefi/: UefiSpec.h
src/proc/: epoch.cpp  syscall.s
src/proc/dwm/: CMakeLists.txt  Makefile  dwm.cpp  dwm.h  linker.ld
src/proc/include/: epoch.h
src/proc/terminal/: CMakeLists.txt  Makefile  terminal.cpp
src/proc/test/: Makefile  epoch.cpp  epoch.h  test.cpp
